Fixed workspace resolution.
- now resolver are local to a project and delegate
  to resolvers of project dependencies.